# gaiasky-catgen

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  gaiasky-catgen  sess.vim
conf/: catalogs-dr3.json  catalogs-edr3int4.json
pack/: README.md  catalog-pack.sh  catalog-template.json  commands-dr3.txt  pack  pack-helper
script/: catalogs-edr3int4  catalogs-edr3int4.json  catalogs-gen.sh
src/: color.rs  constants.rs  coord.rs  data.rs  load.rs  lod.rs  main.rs  math.rs  mem.rs  parse.rs  sess.vim  session.vim  tests.rs  util.rs  write.rs  xmatch.rs
