[package]
name = "gaiasky-catgen"
version = "0.1.0"
authors = ["langurmonkey <tsagrista@ari.uni-heidelberg.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "*"
glob = "*"
nalgebra = "*"
argparse = "*"
memmap ="*"
fast-float = "*"
log = "*"
log4rs = "*"
regex = "*"
procfs = "*"
base_custom = "*"

[profile.release]
lto = true
